<resources>
    <string name="app_name">Tisa Apps</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="title_contact">Contact</string>
    <string name="title_biodata">Biodata</string>
    <string name="title_calculator">Calculator</string>
    <string name="title_weather">Weather</string>
    <string name="title_news">News</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>