<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_biodata"
        android:icon="@drawable/ic_dashboard"
        android:title="@string/title_biodata" />

    <item
        android:id="@+id/navigation_contact"
        android:icon="@drawable/ic_person"
        android:title="@string/title_contact" />

    <item
        android:id="@+id/navigation_calculator"
        android:icon="@drawable/ic_calculate"
        android:title="@string/title_calculator" />

    <item
        android:id="@+id/navigation_weather"
        android:icon="@drawable/ic_cloud"
        android:title="@string/title_weather" />

    <item
        android:id="@+id/navigation_news"
        android:icon="@drawable/ic_newspaper"
        android:title="@string/title_news" />



</menu>